0.5.0 (not yet released)

	* auth: new plugin for HTTP Basic Auth
	* core: new APIs: Pipe, PipeSource, PipeSink
	* updated files headers to new home site, http://xzero.io/
	* cmake: added more auto-tests, as for rrd and fcgi detections.
	* cmake: LLVM and mySQL cannot leak -DNDEBUG=1 anymore (LLVM did for Gentoo/Linux)
	* silencify some release-build compiler warnings
	* http: added "precompressed" handler, preferring .gz / .bz2 files over
	their equivalents and adding respective Content-Encoding header.
	The precompressed file version is only preferred if both files match their
	mtimes (semantically equivalent to nginx)
	* flow: ported from LLVM framework 2.9 to 3.0
	* http: fixes #541 (warn on backlog > SOMAXCONN)
	* SqlStatement: code cleanup and logging readability improvements
	* HttpServer: log listener socket creations
	* Buffer: refactor setCapacity() to use realloc() only (no free()-calls)
	* fastcgi: added backend timeout management
	* fastcgi: code cleanups
	* proxy: fixes origin-Server cloaking
	* proxy: fixes crash
	* HttpConnection: log read/write errors (again)
	* HttpConnection: code cleanups
	* Socket: added remote() and local()
	* SocketSpec: prettify str() output
	* status: added some debugging-purpose request-specific data
	* HttpRequest: extend API to allow custom request inspection
	* Process: API improvements (regarding terminate/kill)
	* package: added pkg-cofig files for library components (base, flow, http)
	* HttpListener: dropped API in favor of ServerSocket
	* ServerSocket: file descriptor leak fixed
	* x0d: stability/consistency improvements
	* x0d: send MAINPID from the *old* to systemd on change. so that
	systemd's NotifyAccess=main works aswell
	* x0d: close listeners as quickly/early as possible in parent's graceful
	shutdown
	* man pages: documentation improvements
	* Socket: added setLoop(ev_loop*)
	* ServerSocket: added start() and stop() methods

0.4.0 (2011-05-26)
