@@ -78,6 +78,7 @@ public:
 	void release();
 
 	virtual size_t writeJSON(x0::Buffer& output) const;
+	virtual void updateHealthMonitor();
 
 	virtual void terminate();
 
