@@ -17,6 +17,7 @@ public:
 
 	virtual const std::string& protocol() const;
 	virtual bool process(x0::HttpRequest* r);
+	virtual void updateHealthMonitor();
 
 	const x0::SocketSpec& socketSpec() const { return socketSpec_; }
 
