@@ -20,9 +20,9 @@ handler setup {
 
 	director.load 'app_cluster' => './tests/app_cluster.db'
 
-	director.create 'statically_created',
-		'rails_3101' => 'http://127.0.0.1:3101/?capacity=1',
-		'rails_3102' => 'http://127.0.0.1:3102/?capacity=1'
+#	director.create 'statically_created',
+#		'rails_3101' => 'http://127.0.0.1:3101/?capacity=1',
+#		'rails_3102' => 'http://127.0.0.1:3102/?capacity=1'
 }
 
 handler main {
