@@ -7,27 +7,23 @@
 #
 # Please see the examples/ directory for real x0 and x0d configuration examples.
 
-# require 'x0/1.0.0'
+import dirlisting from 'plugins'
+import userdir from 'plugins'
+import accesslog from 'plugins'
+import cgi from 'plugins'
+import fastcgi from 'plugins'
+import proxy from 'plugins'
 
-import 'dirlisting' from 'plugins'
-import 'userdir' from 'plugins'
-import 'accesslog' from 'plugins'
-import 'cgi' from 'plugins'
-import 'fastcgi' from 'plugins'
-import 'proxy' from 'plugins'
-
-import 'vhost' from 'plugins'
-import 'status' from 'plugins'
-import 'browser' from 'plugins'
-import 'expire' from 'plugins'
-import 'debug' from 'plugins'
-#import 'rrdfile' from 'plugins'
-#import 'ssl' from 'plugins/ssl'
+import vhost from 'plugins'
+import status from 'plugins'
+import expire from 'plugins'
+import debug from 'plugins'
+import auth from 'plugins'
 
 # rules to be invoked at service startup
 handler setup
 {
-	max_read_idle 10 sec
+	max_read_idle 120 sec
 	max_write_idle 30 sec
 	max_keepalive_idle 10 sec
 	max_keepalive_requests 0
@@ -45,45 +41,36 @@ handler setup
 	mimetypes '/home/trapni/projects/x0/contrib/mime.types'
 	mimetypes.default 'text/plain'
 
-	# HTTPS (SSL)
-#	ssl.listen 'bind' => ::, 'port' => 3443
-#	ssl.loglevel 9
-#	ssl.context 'certfile' => '/home/trapni/projects/ialu/ssl/ialu.de.crt',
-#				'keyfile' => '/home/trapni/projects/ialu/ssl/ialu.de.key'
-
 	# HTTP
 	listen 'bind' => ::, 'port' => 8080, 'backlog' => 128
 	#listen 'bind' => '/tmp/x0d.sock'
 
-	cgi.mapping '.php' => '/usr/lib64/php5.2/bin/php-cgi'
+	cgi.mapping '.php' => '/usr/lib64/php5.3/bin/php-cgi'
 
 	workers 1
 
-	browser.modern "AppleWebKit", "534.30"    # a recent Chromium (on my linux box)
-	browser.modern "Gecko", "20100101"        # Firefox 4.0.1 (windows official release)
-	browser.ancient "Trident"                 # MSIE-based browsers
-
 	vhost.mapping 'localhost' => localhost,
 				  'localhost.ninchens.net' => ninchens,
+				  'joomla.windsor.local' => joomla,
 				  'ninchens.ialu.de' => ninchens,
 				  'ninchens.net' => ninchens,
 				  'ialu.de' => ialu,
 	              'localhost.ialu.de' => ialu
-
-	#rrd.filename "/home/trapni/projects/x0/www/htdocs/rrd/x0d.rrd"
-	#rrd.step 60
 }
 
 handler main
 {
-	#FIXME: why? accesslog '/dev/stdout'
 	if req.path == '/favicon.ico' {
 		expire 30 mins
 		respond 404
 	}
 
-	#rrd
 	status if req.path == '/server-status'
+
+#	auth.realm "My House"
+#	auth.userfile "./htpasswd"
+#	auth.require
+
 	vhost.map
 
 	ialu if req.host =~ /.*\.ialu.de/
@@ -131,6 +118,18 @@ handler localhost
 	default
 }
 
+handler joomla
+{
+	docroot '/home/trapni/www/joomla'
+	autoindex ['index.php']
+
+	pathinfo
+	cgi.map
+
+	precompressed
+	staticfile
+}
+
 handler ninchens
 {
 	#accesslog '/dev/stdout'
@@ -145,12 +144,7 @@ handler ialu
 {
 	#accesslog '/dev/stdout'
 
-	# keep old/incompatible browsers out
-	#respond 403 if browser.is_ancient()
-
 	docroot '/home/trapni/projects/ialu/public'
-	alias '/rrd/' => '/home/trapni/projects/x0/www/htdocs/rrd/'
-	dirlisting if req.path =^ '/rrd/'
 	cgi.exec if phys.path =$ '.cgi'
 
 	expire 1 day if phys.exists and req.path =^ '/static/'
@@ -163,7 +157,8 @@ handler ialu
 		# rails app
 		#fastcgi 'unix:/tmp/ialu-web.socket'
 		#proxy.reverse 'path' => '/tmp/ialu-web.socket'
-		proxy.reverse 'address' => 127.0.0.1, 'port' => 3000
+
+		proxy.reverse 'address' => 127.0.0.1, 'port' => 3100
 	}
 }
 # }}}
